--- a/index.html
+++ b/index.html
@@ -8,11 +8,276 @@
 </head>
 <body>
     <header>
-        <a href="#">
+        <a href="./index.html">
             <img src="./Images/FullLogo.png" alt="logo">
-
         </a>
+        <div class="navBar">
+            <a class="about" href="./index.html">About us</a>
+            <a href="#" class="career">Career</a>
+            <a class="departments">Departments</a>
+        </div>
     </header>
+    <!-- the leadsection -->
+    <section class="section1">
+        <img src="./Images/logo.png" alt="logo" class="firstLogo">
+        <p class="headerP">Making the healthcare experience more human</p>
+        <div class="paragraphs">
+            <div class="p1">
+                <p>"We want patients to find the perfect doctor and book an appointment in the most easy way. The patient journey should be enjoyable, and that's why we are always next to them: to help them find the best possible care. Anytime, anywhere."</p>
+            </div>
+            <div class="p2">
+                <p>"We also help doctors to better manage their practice and build their online reputation. With our integrated end-to-end solution, doctors are able not only to improve their online presence, but also to devote their time to what really matters: their patients."</p>
+            </div>
+        </div>
+    </section>
+    <!-- BOOKINGS -->
+    <section class="section2">
+        <div class="book1">
+            <div>
+                <img src="./Images/icon-patients.svg" alt="patient">
+                <p class="header">For patients</p>
+                <p>Find a doctor, book a visit and solve any health-related doubt</p>
+            </div>
+            <div class="choose">
+                <select>
+                    <option>Choose country</option>
+                    <option value="#">Argentina</option>
+                    <option value="#">Brazil</option>
+                    <option value="#">Chile</option>
+                    <option value="#">Colombia</option>
+                    <option value="#">Czech</option>
+                    <option value="#">Germany</option>
+                    <option value="#">Italy</option>
+                    <option value="#">Mexico</option>
+                    <option value="#">Peru</option>
+                    <option value="#">Poland</option>
+                    <option value="#">Portugal</option>
+                    <option value="#">Spain</option>
+                    <option value="#">Turkey</option>
+                </select>
+            </div>
+        </div>
+        <div class="book2">
+            <div class="textcon">
+                <img src="./Images/icon-doctors.svg" alt="doctors">
+                <p class="header">For doctors</p>
+                <p>Save time managing visits and cut no-shows by half</p>
+            </div>
+            <div class="choose">
+                <select>
+                    <option>Choose country</option>
+                    <option value="#">Argentina</option>
+                    <option value="#">Brazil</option>
+                    <option value="#">Chile</option>
+                    <option value="#">Colombia</option>
+                    <option value="#">Czech</option>
+                    <option value="#">Germany</option>
+                    <option value="#">Italy</option>
+                    <option value="#">Mexico</option>
+                    <option value="#">Peru</option>
+                    <option value="#">Poland</option>
+                    <option value="#">Portugal</option>
+                    <option value="#">Spain</option>
+                    <option value="#">Turkey</option>
+                </select>
+            </div>
+        </div>
+        <div class="book3">
+            <div class="textcon">
+                <img src="./Images/icon-clinics.svg" alt="clinic">
+                <p class="header">For clinics</p>
+                <p>Deliver an exceptional patient experience in your clinic</p>
+            </div>
+            <div class="choose">
+                <select>
+                    <option>2 to 20 specialists</option>
+                    <option value="#">Brazil</option>
+                    <option value="#">Czech</option>
+                    <option value="#">Italy</option>
+                    <option value="#">Mexico</option>
+                    <option value="#">Poland</option>
+                    <option value="#">Spain</option>
+                    <option value="#">Turkey</option>
+                </select>
+                <select>
+                    <option>More than 20 specialists</option>
+                    <option value="#">Brazil</option>
+                    <option value="#">Italy</option>
+                    <option value="#">Mexico</option>
+                    <option value="#">Poland</option>
+                    <option value="#">Spain</option>
+                </select>
+            </div>
+        </div>
+    </section>
+
+    <section class="section3">
+        <div>
+            <div class="3text">
+                <p>"We are a global"
+                    <br>
+                    "company"
+                    <br>
+                    "with local culture"
+                </p>
+            </div>
+            <div class="3logos">
+                <img src="./Images/znanylekarz.png" alt="znanylekarz">
+                <img src="./Images/Doctoralia.png" alt="Doctoralia">
+                <img src="./Images/MioDottore.png" alt="MioDottore">
+                <img src="./Images/doktortakvimi.png" alt="doktortakvimi">
+                <img src="./Images/Znamylekar.jpg" alt="Znamylekar">
+                <img src="./Images/logo-jameda.svg" alt="jameda">
+                <img src="./Images/logo-tuotempo.svg" alt="tuotempo">
+                <img src="./Images/logo-gipo-primary.svg" alt="gipo">
+                <img src="./Images/logo-clinicloud.svg" alt="clinicloud">
+                <img src="./Images/logo-feegow.svg" alt="feegow">
+            </div>
+        </div>
+    </section>
+
+    <section class="section4">
+        <div class="4header">
+            <h2>
+                "The world's biggest"
+                <br>
+                "healthcare platform"
+            </h2>
+            <p>"We work from 9 offices all over the world, bringing Docplanner"
+                <br>
+                "Group to life in 13 countries."
+            </p>
+            <img src="./Images/logocropped.png" alt="background logo">
+        </div>
+        <div class="fourParts">
+            <div id="first">
+                <div id="top">
+                    <img src="./Images/flag.png" alt="flag">
+                    <h3>Leader in 13 countries</h3>
+                    <p>"Poland, Brazil, Mexico, Spain, Italy, Germany, Turkey, Colombia, Czech, Republic, Portugal, Argentina, Peru and Chile"</p>
+                </div>
+                <div id="patients">
+                    <img src="./Images/patients.png" alt="patients">
+                    <h3>90,000,000 patients</h3>
+                    <p>visit our websites each month</p>
+                </div>
+            </div>
+            <div id="second">
+                <div id="appointments">
+                    <img src="./Images/visits.png" alt="visits">
+                    <h3>15,000,000 appointments</h3>
+                    <p>booked last month</p>
+                </div>
+                <div id="doctors">
+                    <img src="./Images/doctors.png" alt="doctor">
+                    <h3>210,000 active doctors</h3>
+                    <p>trust our solutions</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section5">
+        <div>
+            <h3>
+                "Improve the lives of millions."
+                <br>
+                "Change yours forever."
+            </h3>
+            <p>
+                "More than 2800 team mates share our same vision, goals and passion."
+                <br>
+                "With offices in Warsaw, Barcelona, MUnich, Istanbul, Rome, Rio, Bologna,"
+                <br>
+                "Mexico City and Curitiba, our search for great talent never stops."
+            </p>
+        </div>
+    </section>
+    <!-- Places to visit and informations about them -->
+    <section class="section6">
+        <div class="country">
+             <div>
+                <img src="./Images/warsaw.png" alt="warsaw">
+                <div class="buttons">
+                    <p>Warsaw</p>
+                    <button type="button"><b>SEE OPENINGS</b></button>
+                </div>
+             </div>
+             <div>
+                <img src="./Images/barcelona.png" alt="barcelona">
+                <div class="buttons">
+                    <p>Barcelona</p>
+                    <button type="button"><b>SEE OPENINGS</b></button>
+                </div>
+             </div>
+             <div>
+                <img src="./Images/munich.png" alt="munich">
+                <div class="buttons">
+                    <p>Munich</p>
+                    <button type="button"><b>SEE OPENINGS</b></button>
+                </div>
+             </div>
+             <div>
+                <img src="./Images/istanbul.png" alt="istanbul">
+                <div class="buttons">
+                    <p>Instabul</p>
+                    <button type="button"><b>SEE OPENINGS</b></button>
+                </div>
+             </div>
+             <div>
+                <img src="./Images/rome.png" alt="rome">
+                <div class="buttons">
+                    <p>Rome</p>
+                    <button type="button"><b>SEE OPENINGS</b></button>
+                </div>
+             </div>
+             <div>
+                <img src="./Images/bologna.png" alt="bologna">
+                <div class="buttons">
+                    <p>Bologna</p>
+                    <button type="button"><b>SEE OPENINGS</b></button>
+                </div>
+             </div>
+             <div>
+                <img src="./Images/curitiba.png" alt="curitiba">
+                <div class="buttons">
+                    <p>Curitiba</p>
+                    <button type="button"><b>SEE OPENINGS</b></button>
+                </div>
+             </div>
+             <div>
+                <img src="./Images/rio-janeiro.png" alt="rio-janeiro">
+                <div class="buttons">
+                    <p>Rio De Janeiro</p>
+                    <button type="button"><b>SEE OPENINGS</b></button>
+                </div>
+             </div>
+             <div>
+                <img src="./Images/mexico-city.png" alt="mexico city">
+                <div class="buttons">
+                    <p>Mexico City</p>
+                    <button type="button"><b>SEE OPENINGS</b></button>
+                </div>
+             </div>
+                          
+
+        </div>
+    </section>
+    <section class="section7">
+        <div>
+            <h1>Sounds interesting? Join us now!</h1>
+            <button>SEE ALL CURRENT OPENINGS</button>
+        </div>
+    </section>
+<!-- creating the footer -->
+    <footer>
+        <div class="end">
+            <p>We are leaders in 13 countries:<a href="#">Poland</a>, <a href="#">Turky</a>, <a href="#">Spain</a>, <a href="#">Italy</a>, <a href="#">Germany</a>, <a href="#">Czech Republic</a>, <a href="#">Portugal</a>, <a href="#">Mexico</a>, <a href="#">Colombia</a>, <a href="#">Brazil</a>, <a href="#">Argentina</a>, <a href="#">Peru</a> and <a href="#">Chile</a>.</p><br>
+            <p>"This site uses cookies to deliver services in accordance with this Privacy Policy. You can specify the conditions for storing or accessing cookies on your browser."
+                <br>"www.docplanner.com 2023"
+            </p>
+        </div>
+    </footer>
     
 </body>
 </html>
