--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./docstyle.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Work+Sans:ital,wght@1,200;1,300&display=swap" rel="stylesheet">
     <title>Docplanner Group</title>
 </head>
 <body>
@@ -34,13 +40,17 @@
     <section class="section2">
         <div class="book1">
             <div>
-                <img src="./Images/icon-patients.svg" alt="patient">
-                <p class="header">For patients</p>
-                <p>Find a doctor, book a visit and solve any health-related doubt</p>
+                <img src="./Images/patients.png" alt="patient" width="40px" height="40px">
+                <h2>For patients</h2>
+                <p class="patient" style="font-family: roboto;">
+                    Find a doctor,book a <br>
+                    visit and solve any <br>
+                    health-related doubt
+                </p>
             </div>
             <div class="choose">
-                <select>
-                    <option>Choose country</option>
+                <select style="background-color: #00ccb1;">
+                    <option style="font-family: roboto, ;">Choose country</option>
                     <option value="#">Argentina</option>
                     <option value="#">Brazil</option>
                     <option value="#">Chile</option>
@@ -59,12 +69,15 @@
         </div>
         <div class="book2">
             <div class="textcon">
-                <img src="./Images/icon-doctors.svg" alt="doctors">
-                <p class="header">For doctors</p>
-                <p>Save time managing visits and cut no-shows by half</p>
+                <img src="./Images/doctors.jpeg" alt="doctors" width="40px" height="40px">
+                <h2>For doctors</h2>
+                <p class="patient" style="font-family: roboto;">Save time <br>
+                    managing visits and <br>
+                    cut no-shows by <br>
+                    half</p>
             </div>
             <div class="choose">
-                <select>
+                <select style="background-color: #3d83df;">
                     <option>Choose country</option>
                     <option value="#">Argentina</option>
                     <option value="#">Brazil</option>
@@ -84,12 +97,14 @@
         </div>
         <div class="book3">
             <div class="textcon">
-                <img src="./Images/icon-clinics.svg" alt="clinic">
-                <p class="header">For clinics</p>
-                <p>Deliver an exceptional patient experience in your clinic</p>
+                <img src="./Images/icon-clinics.svg" alt="clinic" width="40px" height="40px">
+                <h2>For clinics</h2>
+                <p class="patient" style="font-family: roboto;">Deliver an exceptional <br>
+                    patient experience in <br>
+                    your clinic</p>
             </div>
             <div class="choose">
-                <select>
+                <p><select style="background-color: #1b2734;">
                     <option>2 to 20 specialists</option>
                     <option value="#">Brazil</option>
                     <option value="#">Czech</option>
@@ -98,8 +113,8 @@
                     <option value="#">Poland</option>
                     <option value="#">Spain</option>
                     <option value="#">Turkey</option>
-                </select>
-                <select>
+                </select></p>
+                <select style="background-color: #1b2734;">
                     <option>More than 20 specialists</option>
                     <option value="#">Brazil</option>
                     <option value="#">Italy</option>
@@ -113,63 +128,65 @@
 
     <section class="section3">
         <div>
-            <div class="3text">
-                <p>"We are a global"
+            <div class="text">
+                <p>We are a global
                     <br>
-                    "company"
+                   company
                     <br>
-                    "with local culture"
+                   with local 
+                   <br>
+                   culture
                 </p>
             </div>
-            <div class="3logos">
-                <img src="./Images/znanylekarz.png" alt="znanylekarz">
-                <img src="./Images/Doctoralia.png" alt="Doctoralia">
-                <img src="./Images/MioDottore.png" alt="MioDottore">
-                <img src="./Images/doktortakvimi.png" alt="doktortakvimi">
-                <img src="./Images/Znamylekar.jpg" alt="Znamylekar">
-                <img src="./Images/logo-jameda.svg" alt="jameda">
-                <img src="./Images/logo-tuotempo.svg" alt="tuotempo">
-                <img src="./Images/logo-gipo-primary.svg" alt="gipo">
-                <img src="./Images/logo-clinicloud.svg" alt="clinicloud">
-                <img src="./Images/logo-feegow.svg" alt="feegow">
+            <div class="logos">
+                <img src="./Images/znanylekarz.png" alt="znanylekarz" width="80px" height="15px">
+                <img src="./Images/Doctoralia.png" alt="Doctoralia" width="80px" height="15px">
+                <img src="./Images/MioDottore.png" alt="MioDottore" width="80px" height="15px">
+                <img src="./Images/doktortakvimi.png" alt="doktortakvimi" width="80px" height="15px">
+                <img src="./Images/Znamylekar.jpg" alt="Znamylekar" width="80px" height="15px">
+                <img src="./Images/logo-jameda.svg" alt="jameda" width="80px" height="15px">
+                <img src="./Images/logo-tuotempo.svg" alt="tuotempo" width="80px" height="35px">
+                <img src="./Images/logo-gipo-primary.svg" alt="gipo" width="80px" height="60px">
+                <img src="./Images/logo-clinicloud.svg" alt="clinicloud" width="80px" height="50px">
+                <img src="./Images/logo-feegow.svg" alt="feegow" width="80px" height="40px">
             </div>
         </div>
     </section>
 
     <section class="section4">
-        <div class="4header">
+        <div class="fourth">
             <h2>
-                "The world's biggest"
+                The world's biggest
                 <br>
-                "healthcare platform"
+                healthcare platform
             </h2>
-            <p>"We work from 9 offices all over the world, bringing Docplanner"
+            <p>We work from 9 offices all over the world, bringing Docplanner
                 <br>
-                "Group to life in 13 countries."
+                Group to life in 13 countries.
             </p>
             <img src="./Images/logocropped.png" alt="background logo">
         </div>
         <div class="fourParts">
             <div id="first">
                 <div id="top">
-                    <img src="./Images/flag.png" alt="flag">
+                    <img src="./Images/flag.png" alt="flag" width="25px" height="auto">
                     <h3>Leader in 13 countries</h3>
-                    <p>"Poland, Brazil, Mexico, Spain, Italy, Germany, Turkey, Colombia, Czech, Republic, Portugal, Argentina, Peru and Chile"</p>
+                    <p>Poland, Brazil, Mexico, Spain, Italy, Germany, Turkey, Colombia, Czech, Republic, Portugal, Argentina, Peru and Chile</p>
                 </div>
                 <div id="patients">
-                    <img src="./Images/patients.png" alt="patients">
+                    <img src="./Images/patients (1).png" alt="patients" width="25px" height="auto">
                     <h3>90,000,000 patients</h3>
                     <p>visit our websites each month</p>
                 </div>
             </div>
             <div id="second">
                 <div id="appointments">
-                    <img src="./Images/visits.png" alt="visits">
+                    <img src="./Images/visits.png" alt="visits" width="25px" height="auto">
                     <h3>15,000,000 appointments</h3>
                     <p>booked last month</p>
                 </div>
                 <div id="doctors">
-                    <img src="./Images/doctors.png" alt="doctor">
+                    <img src="./Images/doctors.png" alt="doctor" width="25px" height="auto">
                     <h3>210,000 active doctors</h3>
                     <p>trust our solutions</p>
                 </div>
@@ -180,16 +197,16 @@
     <section class="section5">
         <div>
             <h3>
-                "Improve the lives of millions."
+                Improve the lives of millions.
                 <br>
-                "Change yours forever."
+                Change yours forever.
             </h3>
             <p>
-                "More than 2800 team mates share our same vision, goals and passion."
+                More than 2800 team mates share our same vision, goals and passion.
                 <br>
-                "With offices in Warsaw, Barcelona, MUnich, Istanbul, Rome, Rio, Bologna,"
+                With offices in Warsaw, Barcelona, Munich, Istanbul, Rome, Rio, Bologna,
                 <br>
-                "Mexico City and Curitiba, our search for great talent never stops."
+                Mexico City and Curitiba, our search for great talent never stops.
             </p>
         </div>
     </section>
@@ -198,63 +215,63 @@
         <div class="country">
              <div>
                 <img src="./Images/warsaw.png" alt="warsaw">
-                <div class="buttons">
+                <div id="buttons">
                     <p>Warsaw</p>
                     <button type="button"><b>SEE OPENINGS</b></button>
                 </div>
              </div>
              <div>
                 <img src="./Images/barcelona.png" alt="barcelona">
-                <div class="buttons">
+                <div id="buttons">
                     <p>Barcelona</p>
                     <button type="button"><b>SEE OPENINGS</b></button>
                 </div>
              </div>
              <div>
                 <img src="./Images/munich.png" alt="munich">
-                <div class="buttons">
+                <div id="buttons">
                     <p>Munich</p>
                     <button type="button"><b>SEE OPENINGS</b></button>
                 </div>
              </div>
              <div>
                 <img src="./Images/istanbul.png" alt="istanbul">
-                <div class="buttons">
+                <div id="buttons">
                     <p>Instabul</p>
                     <button type="button"><b>SEE OPENINGS</b></button>
                 </div>
              </div>
              <div>
                 <img src="./Images/rome.png" alt="rome">
-                <div class="buttons">
+                <div id="buttons">
                     <p>Rome</p>
                     <button type="button"><b>SEE OPENINGS</b></button>
                 </div>
              </div>
              <div>
                 <img src="./Images/bologna.png" alt="bologna">
-                <div class="buttons">
+                <div id="buttons">
                     <p>Bologna</p>
                     <button type="button"><b>SEE OPENINGS</b></button>
                 </div>
              </div>
              <div>
                 <img src="./Images/curitiba.png" alt="curitiba">
-                <div class="buttons">
+                <div id="buttons">
                     <p>Curitiba</p>
                     <button type="button"><b>SEE OPENINGS</b></button>
                 </div>
              </div>
              <div>
                 <img src="./Images/rio-janeiro.png" alt="rio-janeiro">
-                <div class="buttons">
+                <div id="buttons">
                     <p>Rio De Janeiro</p>
                     <button type="button"><b>SEE OPENINGS</b></button>
                 </div>
              </div>
              <div>
                 <img src="./Images/mexico-city.png" alt="mexico city">
-                <div class="buttons">
+                <div id="buttons">
                     <p>Mexico City</p>
                     <button type="button"><b>SEE OPENINGS</b></button>
                 </div>
